--- a/GeoSample/Base.lproj/Main.storyboard
+++ b/GeoSample/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,75 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GeoSample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lYi-BX-ftu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="493"/>
+                            </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="9qb-8a-Zro">
+                                <rect key="frame" x="177" y="236" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="k1a-2H-Poy"/>
+                                    <constraint firstAttribute="width" constant="20" id="zdo-6Q-3wI"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ynt-Xv-Cgt">
+                                <rect key="frame" x="112.5" y="593" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="yoh-8u-cHs"/>
+                                </constraints>
+                                <state key="normal" title="Register"/>
+                                <connections>
+                                    <action selector="didTapRegisterButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WLj-5U-XZx"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j4Y-p4-ooP">
+                                <rect key="frame" x="112.5" y="523" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="cvV-RU-scx"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Radius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vL6-cG-aN5">
+                                <rect key="frame" x="40.5" y="523" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ynt-Xv-Cgt" secondAttribute="bottom" constant="44" id="1zb-as-Imn"/>
+                            <constraint firstItem="vL6-cG-aN5" firstAttribute="top" secondItem="j4Y-p4-ooP" secondAttribute="top" id="6fn-Sy-5qn"/>
+                            <constraint firstItem="Ynt-Xv-Cgt" firstAttribute="top" secondItem="j4Y-p4-ooP" secondAttribute="bottom" constant="40" id="RDn-XK-Qq3"/>
+                            <constraint firstItem="j4Y-p4-ooP" firstAttribute="leading" secondItem="vL6-cG-aN5" secondAttribute="trailing" constant="20" id="Ucg-cu-hK4"/>
+                            <constraint firstItem="9qb-8a-Zro" firstAttribute="centerY" secondItem="lYi-BX-ftu" secondAttribute="centerY" id="VMl-Nv-XcM"/>
+                            <constraint firstItem="Ynt-Xv-Cgt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VwX-Fi-Eze"/>
+                            <constraint firstItem="lYi-BX-ftu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ad1-vw-jq0"/>
+                            <constraint firstItem="lYi-BX-ftu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gkT-YE-626"/>
+                            <constraint firstItem="lYi-BX-ftu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="khi-TT-Bzi"/>
+                            <constraint firstItem="j4Y-p4-ooP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qSP-qY-KQQ"/>
+                            <constraint firstItem="9qb-8a-Zro" firstAttribute="centerX" secondItem="lYi-BX-ftu" secondAttribute="centerX" id="r84-v5-5v6"/>
+                            <constraint firstItem="j4Y-p4-ooP" firstAttribute="top" secondItem="lYi-BX-ftu" secondAttribute="bottom" constant="30" id="xXz-MA-7v4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="lYi-BX-ftu" id="UmL-8K-S0B"/>
+                        <outlet property="radiusTextField" destination="j4Y-p4-ooP" id="muz-k4-BxK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Image" width="150" height="150"/>
+    </resources>
 </document>
